--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,4 @@
+/*Global Styles & color vars */
 *{
   box-sizing: border-box;
   --heading-bgs: #4aaaa5;
@@ -10,6 +11,7 @@
 
 }
 
+/*Fonts & utilities*/
 h1,
 h2,
 h3,
@@ -19,23 +21,44 @@ h5{
   color: var(--heading-bgs);
 
 }
-
-body{
-  background-image: url("/assets/images/dust_scratches.png");
-  font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
+hr{
+  color: var(--font-color);
+  opacity: .4;
 }
-
+body{
+  background-image: url("../images/dust_scratches.png");
+  font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
+  overflow-x: hidden;
+}
 
 body p{
   font-family: inherit;
   line-height: 2;
   color: var(--font-color);
 }
+
+.right{
+  float: right;
+}
+.left{
+  float: left;
+}
+.group:after {
+  content: "";
+  display: table;
+  clear: both;
+}
+
+
+/*Top section of page
+  logo styles and nav styles
+ */
 header{
   height: 80px;
-  width: 960px;
+  width: 100%;
   margin: auto;
   border-bottom: solid 1px var(--main-header-border);
+  background-color: var(--main-header);
 }
 header .logo{
   float: left;
@@ -43,8 +66,7 @@ header .logo{
   height: 100%;
   text-align: center;
 }
-
-.logo h1{
+.logo  h1{
   margin: .5em auto;
   color: var(--main-header);
   font-size: 1.75rem;
@@ -54,40 +76,108 @@ header nav{
   float: right;
   margin-top: 2em;
 }
-
 nav ul{
   display: inline-block;
   color: var(--font-color);
 }
-
 nav ul:nth-child(2){
   border-left: 1px solid var(--font-color);
   border-right: 1px solid var(--font-color);
 }
-
 nav a{
   text-decoration: none;
   color: inherit;
   padding: .5em;
 }
-
-.container{
-  width: 960px;
+/*Wrapper class for nav to keep everything inside the content area */
+.wrapper{
+  width: 960;
   margin: auto;
 }
+
+/*Styles present in each page
+  container - main content area.
+  footer - its sticky but it's also hacky
+ */
+.container{
+  width: 960px;
+  margin: 1em auto;
+  margin-bottom: 3em;
+  background-color: var(--main-content-bg);
+  padding: .5em 1.75em 1em 1.75em;
+}
 .container h1{
+  font-weight: bold;
   font-size: 1.75em;
   margin-top: 1.25em;
   margin-bottom: 1em;
 }
+
+footer{
+  background-color: var(--footer-bg);
+  padding-bottom: 1.5em;
+  text-align: center;
+  width: 100%;
+}
+
+footer p{
+  color: var(--main-header);
+  padding-top: 1em;
+}
+
+.content {
+  min-height: calc(100vh - 70px);
+}
+/*Home page styles and layout */
 .about-me img{
   width: 150px;
   height: auto;
   float: left;
   margin-right: 2em;
 }
-
-footer{
-
+/*Portfolio page styles and layout*/
+.card{
+  width: 200px;
+  height: auto;
+  position: relative;
+  margin: 1em;
+  display: inline-block;
   text-align: center;
+}
+.card h3{
+  position: absolute;
+  padding: 1em 4.505em;
+  right: 0px;
+  top: 70px;
+  background-color: var(--heading-bgs);
+  color: var(--main-header);
+
+}
+.card img{
+  width: 100%;
+}
+
+/*Contact Page styles and layouts*/
+form label,
+form input,
+form textarea,
+form button{
+  display: block;
+  width: 100%;
+  margin: .5em;
+}
+form input{
+  padding: .5em;
+}
+
+form button{
+  background-color: var(--heading-bgs);
+  width: 20%;
+  color: var(--main-header);
+  padding: 1em;
+}
+form{
+  margin: auto;
+  width: 900px;
+  color: var(--font-color);
 }
