--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,5 +1,6 @@
 /*Global Styles & color vars */
-*{
+
+* {
   box-sizing: border-box;
   --heading-bgs: #4aaaa5;
   --font-color: #777777;
@@ -8,41 +9,40 @@
   --footer-bg: #666666;
   --main-content-bg: #ffffff;
   --main-content-border: #dddddd;
-
 }
 
 /*Fonts & utilities*/
-h1,
-h2,
-h3,
-h4,
-h5{
+
+h1, h2, h3, h4, h5 {
   font-family: 'Georgia', Times, Times New Roman, serif;
   color: var(--heading-bgs);
-
 }
-hr{
+
+hr {
   color: var(--font-color);
   opacity: .4;
 }
-body{
+
+body {
   background-image: url("../images/dust_scratches.png");
   font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
   overflow-x: hidden;
 }
 
-body p{
+body p {
   font-family: inherit;
   line-height: 2;
   color: var(--font-color);
 }
 
-.right{
+.right {
   float: right;
 }
-.left{
+
+.left {
   float: left;
 }
+
 .group:after {
   content: "";
   display: table;
@@ -52,81 +52,126 @@ body p{
 /*
   Grid with floats.
  */
- .row:after {
-   content: "";
-   display: table;
-   clear: both;
- }
- [class*="col-"] {
-     float: left;
- }
- .col-1{width: 8.33%;}
- .col-2{width: 12.67%;}
- .col-3{width: 25%;}
- .col-4{width: 33%;}
- .col-5{width: 41.67%;}
- .col-6{width: 50%;}
- .col-7{width: 58.33%;}
- .col-8{width: 66.67%;}
- .col-9{width: .75%;}
- .col-10{width: 83.33%;}
- .col-11{width: 91.67%;}
- .col-12{width: 100%;}
 
+.row:after {
+  content: "";
+  display: table;
+  clear: both;
+}
 
+[class*="col-"] {
+  float: left;
+}
 
+.col-1 {
+  width: 8.33%;
+}
+
+.col-2 {
+  width: 12.67%;
+}
+
+.col-3 {
+  width: 25%;
+}
+
+.col-4 {
+  width: 33%;
+}
+
+.col-5 {
+  width: 41.67%;
+}
+
+.col-6 {
+  width: 50%;
+}
+
+.col-7 {
+  width: 58.33%;
+}
+
+.col-8 {
+  width: 66.67%;
+}
+
+.col-9 {
+  width: .75%;
+}
+
+.col-10 {
+  width: 83.33%;
+}
+
+.col-11 {
+  width: 91.67%;
+}
+
+.col-12 {
+  width: 100%;
+}
 
 /*Top section of page
   logo styles and nav styles
  */
-header{
+
+header {
   height: 80px;
   width: 100%;
   margin: auto;
   border-bottom: solid 1px var(--main-header-border);
   background-color: var(--main-header);
-  box-shadow: 1px -1px 8px 1px rgba(107,102,63,.9);
+  box-shadow: 1px -1px 8px 1px rgba(107, 102, 63, .9);
 }
-header .logo{
+
+header .logo {
   float: left;
-  background-color:  var(--heading-bgs);
+  background-color: var(--heading-bgs);
   height: 100%;
   text-align: center;
 }
-.logo  p{
+
+.logo p {
   margin: .5em auto .35em auto;
   color: var(--main-header);
   font-size: 1.75rem;
   padding-left: .25em;
   padding-right: .25em;
-  text-shadow: -3px 3px 6px rgba(0,0,0,1);
-
+  text-shadow: -3px 3px 6px rgba(0, 0, 0, 1);
 }
-header nav{
+
+header nav {
   float: right;
   margin-top: 2em;
 }
-nav li{
+
+nav li {
   display: inline-block;
   color: var(--font-color);
 }
-nav li:nth-child(2){
+
+nav li:nth-child(2) {
   border-left: 1px solid var(--font-color);
   border-right: 1px solid var(--font-color);
 }
-nav a{
+
+nav a {
   text-decoration: none;
   color: inherit;
   padding: .5em;
 }
-nav .active{
+
+nav .active {
   color: var(--heading-bgs);
 }
-nav a:hover{
+
+nav a:hover {
   text-shadow: 1px 2px 3px rgba(0, 0, 0, 0.5);
 }
+
 /*Wrapper class for nav to keep everything inside the content area */
-.wrapper{
+
+.wrapper {
   max-width: 900px;
   margin: auto;
 }
@@ -135,22 +180,24 @@ nav a:hover{
   container - main content area.
   footer - its sticky but it's also hacky
  */
-.container{
+
+.container {
   max-width: 900px;
   margin: 1em auto;
   margin-bottom: 3em;
   background-color: var(--main-content-bg);
   padding: .5em 1.75em 1em 1.75em;
-  box-shadow: 0px 7px 10px 3px rgba(107,102,63,.9);
+  box-shadow: 0px 7px 10px 3px rgba(107, 102, 63, .9);
 }
-.container h1{
+
+.container h1 {
   font-weight: bold;
   font-size: 1.75em;
   margin-top: 1.25em;
   margin-bottom: 1em;
 }
 
-footer{
+footer {
   background-color: var(--footer-bg);
   padding-bottom: 1.5em;
   text-align: center;
@@ -158,17 +205,18 @@ footer{
   border-top: .5em solid var(--heading-bgs);
 }
 
-footer p{
+footer p {
   color: var(--main-header);
   padding-top: 1em;
 }
 
-
 .content {
   min-height: calc(100vh - 70px);
 }
+
 /*Home page styles and layout */
-.about-me img{
+
+.about-me img {
   width: 150px;
   height: auto;
   float: left;
@@ -176,88 +224,77 @@ footer p{
   clip-path: polygon(30% 0%, 70% 0%, 100% 30%, 100% 70%, 70% 100%, 30% 100%, 0% 70%, 0% 30%);
   shape-outside: polygon(30% 0%, 70% 0%, 100% 30%, 100% 70%, 70% 100%, 30% 100%, 0% 70%, 0% 30%);
 }
+
 /*Portfolio page styles and layout*/
-.card{
+
+.card {
   width: 100%;
   height: auto;
   padding: 1em;
   text-align: center;
 }
 
-.card-content{
+.card-content {
   width: 200px;
-  margin:  0 auto;
-
+  margin: 0 auto;
 }
-.card h3{
+
+.card h3 {
   background-color: var(--heading-bgs);
   color: var(--main-header);
   width: 100%;
-
 }
-.card a{
+
+.card a {
   text-decoration: none;
   color: inherit;
 }
-.card h3:hover{
+
+.card h3:hover {
   text-shadow: 1px 2px 3px rgba(0, 0, 0, 0.5);
 }
-.card img{
+
+.card img {
   width: 200px;
 }
 
 /*Contact Page styles and layouts*/
-form label,
-form input,
-form textarea,
-form button{
+
+form label, form input, form textarea, form button {
   display: block;
   width: 100%;
   margin: .5em;
 }
-form textarea{
+
+form textarea {
   opacity: .25;
 }
-form input{
+
+form input {
   padding: .5em;
   border: solid 1px;
   opacity: .25;
 }
 
-form button{
+form button {
   background-color: var(--heading-bgs);
   width: 20%;
   color: var(--main-header);
   padding: 1em;
   font-size: 1.1em;
 }
-form{
+
+form {
   margin: auto;
   max-width: 900px;
   color: var(--font-color);
-
 }
 
 @media (max-width: 700px) {
-  .col-1,
-  .col-2,
-  .col-3,
-  .col-4,
-  .col-5,
-  .col-6,
-  .col-7,
-  .col-8,
-  .col-9,
-  .col-10,
-  .col-11,
-  .col-12
-  {
+  .col-1, .col-2, .col-3, .col-4, .col-5, .col-6, .col-7, .col-8, .col-9, .col-10, .col-11, .col-12 {
     width: 100%;
   }
-
-  .card,
-  .card img,
-  .card h3{
+  .card, .card img, .card h3 {
     width: 500px;
     margin: auto;
   }
