--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,12 +2,12 @@
 
 * {
   box-sizing: border-box;
-  --heading-bgs: #4aaaa5;
-  --font-color: #777777;
-  --main-header: #ffffff;
+  --heading-bgs: #347B98;
+  --font-color: #1A3E4C;
+  --main-header: #E4F1F6;
   --main-header-border: #cccccc;
-  --footer-bg: #666666;
-  --main-content-bg: #ffffff;
+  --footer-bg: #1A3E4C;
+  --main-content-bg: #E4F1F6;
   --main-content-border: #dddddd;
 }
 
@@ -24,7 +24,7 @@ hr {
 }
 
 body {
-  background-image: url("../images/dust_scratches.png");
+  background: radial-gradient(#1A3E4C 25%, #092834 60%);
   font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
   overflow-x: hidden;
 }
@@ -122,6 +122,7 @@ header {
   border-bottom: solid 1px var(--main-header-border);
   background-color: var(--main-header);
   box-shadow: 1px -1px 8px 1px rgba(107, 102, 63, .9);
+
 }
 
 header .logo {
@@ -129,6 +130,8 @@ header .logo {
   background-color: var(--heading-bgs);
   height: 100%;
   text-align: center;
+  clip-path: polygon(25% 0%, 100% 0%, 75% 100%, 0% 100%);
+  padding: 0 4em;
 }
 
 .logo p {
@@ -147,7 +150,7 @@ header nav {
 
 nav li {
   display: inline-block;
-  color: var(--font-color);
+  color: var(--heading-bgs);
 }
 
 nav li:nth-child(2) {
@@ -162,7 +165,8 @@ nav a {
 }
 
 nav .active {
-  color: var(--heading-bgs);
+  color: var(--font-color);
+  font-size: 1.1em;
 }
 
 nav a:hover {
@@ -187,7 +191,7 @@ nav a:hover {
   margin-bottom: 3em;
   background-color: var(--main-content-bg);
   padding: .5em 1.75em 1em 1.75em;
-  box-shadow: 0px 7px 10px 3px rgba(107, 102, 63, .9);
+  box-shadow: 0px 7px 10px 3px rgb(11, 14, 14);
 }
 
 .container h1 {
@@ -203,11 +207,23 @@ footer {
   text-align: center;
   width: 100%;
   border-top: .5em solid var(--heading-bgs);
+  position: relative;
 }
 
 footer p {
   color: var(--main-header);
   padding-top: 1em;
+}
+
+footer::before{
+  content: "";
+  width: 20px;
+  height: 1px;
+  border: 1px red solid;
+  background-color: red;
+  position: absolute;
+
+
 }
 
 .content {
