--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -200,7 +200,12 @@ nav a:hover {
   margin-top: 1.25em;
   margin-bottom: 1em;
 }
-
+.container h2{
+  font-size: 1.5em;
+  font-weight: bold;
+  margin-bottom: 1em;
+  margin-top: 1.25em;
+}
 footer {
   background-color: var(--footer-bg);
   padding-bottom: 1.5em;
@@ -283,13 +288,16 @@ form label, form input, form textarea, form button {
 }
 
 form textarea {
-  opacity: .25;
+
+  margin: auto;
 }
 
 form input {
   padding: .5em;
   border: solid 1px;
-  opacity: .25;
+  margin: auto;
+
+  color:var(--font-color);
 }
 
 form button {
@@ -302,9 +310,30 @@ form button {
 
 form {
   margin: auto;
-  max-width: 900px;
+
   color: var(--font-color);
 }
+.contact-floats{
+  margin: 1em;
+  text-align: center;
+  min-width: 225px;
+  max-width: 900px;
+  margin-bottom: 3em;
+  background-color: var(--main-content-bg);
+  padding: .5em 1.75em 1em 1.75em;
+  box-shadow: 0px 7px 10px 3px rgb(11, 14, 14);
+}
+.icon{
+  width: 4em;
+  height: auto;
+}
+
+.icon:hover{
+  width: 5em;
+  height: auto;
+}
+
+
 
 @media (max-width: 700px) {
   .col-1, .col-2, .col-3, .col-4, .col-5, .col-6, .col-7, .col-8, .col-9, .col-10, .col-11, .col-12 {
