--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,7 +1,5 @@
 /*Global Styles & color vars */
-
-* {
-  box-sizing: border-box;
+:root{
   --heading-bgs: #347B98;
   --font-color: #1A3E4C;
   --main-header: #E4F1F6;
@@ -10,12 +8,19 @@
   --main-content-bg: #E4F1F6;
   --main-content-border: #dddddd;
 }
+* {
+  box-sizing: border-box;
+}
 
 /*Fonts & utilities*/
 
 h1, h2, h3, h4, h5 {
   font-family: 'Georgia', Times, Times New Roman, serif;
   color: var(--heading-bgs);
+}
+
+h2{
+  font-size: 1.5em;
 }
 
 hr {
@@ -192,6 +197,7 @@ nav a:hover {
   background-color: var(--main-content-bg);
   padding: .5em 1.75em 1em 1.75em;
   box-shadow: 0px 7px 10px 3px rgb(11, 14, 14);
+  border-radius: .2em;
 }
 
 .container h1 {
@@ -242,41 +248,71 @@ footer::before{
   height: auto;
   float: left;
   margin-right: 2em;
-  clip-path: polygon(30% 0%, 70% 0%, 100% 30%, 100% 70%, 70% 100%, 30% 100%, 0% 70%, 0% 30%);
-  shape-outside: polygon(30% 0%, 70% 0%, 100% 30%, 100% 70%, 70% 100%, 30% 100%, 0% 70%, 0% 30%);
+  clip-path: polygon(31% -5%, 107% 0%, 108% 6%, 98% 74%, 69% 110%, -17% 100%, 0% 70%, 0% 30%);
+  shape-outside: polygon(31% -5%, 107% 0%, 108% 6%, 98% 74%, 69% 110%, -17% 100%, 0% 70%, 0% 30%);
+  border-radius: .2em;
+}
+
+.about-me p::first-letter{
+  color: #903;
+  float: left;
+  font-family: Georgia;
+  font-size: 75px;
+  line-height: 60px;
+  padding-top: 4px;
+  padding-right: 8px;
+  padding-left: 3px;
 }
 
 /*Portfolio page styles and layout*/
 
 .card {
-  width: 100%;
+  max-width: 30em;
+  min-width: 20em;
   height: auto;
-  padding: 1em;
+  text-align: center;
+  position: relative;
+  padding: .25em;
+}
+.card:first-child{
+  margin: 0 0 0 4em;
+}
+.card h3 {
+  color: var(--heading-bgs);
+  font-size: 1em;
+  color: var(--main-header);
+}
+.card img {
+  width: 100%;
+}
+.card p{
+  font-size: .75em;
+}
+.text {
+  color: white;
+  font-size: 20px;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  -ms-transform: translate(-50%, -50%);
   text-align: center;
 }
 
-.card-content {
-  width: 200px;
-  margin: 0 auto;
-}
-
-.card h3 {
+.overlay {
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  height: 99%;
+  width: 99%;
+  opacity: 0;
+  transition: .5s ease;
   background-color: var(--heading-bgs);
-  color: var(--main-header);
-  width: 100%;
 }
-
-.card a {
-  text-decoration: none;
-  color: inherit;
-}
-
-.card h3:hover {
-  text-shadow: 1px 2px 3px rgba(0, 0, 0, 0.5);
-}
-
-.card img {
-  width: 200px;
+.card:hover .overlay {
+  opacity: 1;
 }
 
 /*Contact Page styles and layouts*/
@@ -322,25 +358,24 @@ form {
   background-color: var(--main-content-bg);
   padding: .5em 1.75em 1em 1.75em;
   box-shadow: 0px 7px 10px 3px rgb(11, 14, 14);
+  border-radius: .2em;
 }
 .icon{
   width: 4em;
   height: auto;
+
 }
 
 .icon:hover{
-  width: 5em;
-  height: auto;
+  animation: btn-social;
+  animation-duration: 1s;
 }
 
-
-
-@media (max-width: 700px) {
-  .col-1, .col-2, .col-3, .col-4, .col-5, .col-6, .col-7, .col-8, .col-9, .col-10, .col-11, .col-12 {
-    width: 100%;
+@keyframes btn-social {
+  0%{
+    transform: scale(1.25);
   }
-  .card, .card img, .card h3 {
-    width: 500px;
-    margin: auto;
+  40%{
+    transform: rotate(-280deg);
   }
 }
