fixed submit button again....

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -442,6 +442,7 @@ form {
 @media (max-width: 570px) {
   form button{
     width: 100%;
+    margin: 1em 0;
   }
   .contact-floats{
     margin: 1em 1em;
