--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -43,11 +43,11 @@ body p {
 form label, form input, form textarea, form button {
   display: block;
   width: 100%;
-  margin: .5em;
+
 }
 
 form textarea {
-
+  width: 100%;
   margin: auto;
 }
 
@@ -61,14 +61,14 @@ form input {
 
 form button {
   background-color: var(--heading-bgs);
-  width: 20%;
+
   color: var(--main-header);
   padding: 1em;
   font-size: 1.1em;
 }
 
 form {
-  margin: auto;
+
   color: var(--font-color);
 }
 
@@ -87,13 +87,6 @@ footer p {
 }
 
 
-.right {
-  float: right;
-}
-
-.left {
-  float: left;
-}
 
 .group:after {
   content: "";
@@ -101,74 +94,12 @@ footer p {
   clear: both;
 }
 
-/*
-  Grid with floats.
- */
-
-.row:after {
-  content: "";
-  display: table;
-  clear: both;
-}
-
-[class*="col-"] {
-  float: left;
-}
-
-.col-1 {
-  width: 8.33%;
-}
-
-.col-2 {
-  width: 12.67%;
-}
-
-.col-3 {
-  width: 25%;
-}
-
-.col-4 {
-  width: 33%;
-}
-
-.col-5 {
-  width: 41.67%;
-}
-
-.col-6 {
-  width: 50%;
-}
-
-.col-7 {
-  width: 58.33%;
-}
-
-.col-8 {
-  width: 66.67%;
-}
-
-.col-9 {
-  width: .75%;
-}
-
-.col-10 {
-  width: 83.33%;
-}
-
-.col-11 {
-  width: 91.67%;
-}
-
-.col-12 {
-  width: 100%;
-}
-
 /*Top section of page
   logo styles and nav styles
  */
 
 header {
-  height: 80px;
+
   width: 100%;
   margin: auto;
   border-bottom: solid 1px var(--main-header-border);
@@ -178,26 +109,23 @@ header {
 }
 
 header .logo {
-  float: left;
+  max-width: 15em;
   background-color: var(--heading-bgs);
   height: 100%;
   text-align: center;
-  clip-path: polygon(25% 0%, 100% 0%, 75% 100%, 0% 100%);
-  padding: 0 4em;
+
 }
 
 .logo p {
-  margin: .5em auto .35em auto;
   color: var(--main-header);
   font-size: 1.75rem;
-  padding-left: .25em;
-  padding-right: .25em;
   text-shadow: -3px 3px 6px rgba(0, 0, 0, 1);
+  padding: .25em;
 }
 
 header nav {
-  float: right;
-  margin-top: 2em;
+  width: 100%;
+  padding: 0;
 }
 
 nav li {
@@ -213,7 +141,7 @@ nav li:nth-child(2) {
 nav a {
   text-decoration: none;
   color: inherit;
-  padding: .5em;
+
 }
 
 nav .active {
@@ -268,9 +196,9 @@ nav a:hover {
 /*Home page styles and layout */
 
 .about-me img {
-  width: 150px;
+  width: 100%;
   height: auto;
-  float: left;
+
   margin-right: 2em;
   clip-path: polygon(31% -5%, 107% 0%, 108% 6%, 98% 74%, 69% 110%, -17% 100%, 0% 70%, 0% 30%);
   shape-outside: polygon(31% -5%, 107% 0%, 108% 6%, 98% 74%, 69% 110%, -17% 100%, 0% 70%, 0% 30%);
@@ -299,9 +227,7 @@ nav a:hover {
   position: relative;
   padding: .25em;
 }
-.card:first-child{
-  margin: 0 0 0 4em;
-}
+
 .card h3 {
   color: var(--heading-bgs);
   font-size: 1em;
@@ -345,15 +271,13 @@ nav a:hover {
 
 
 .contact-floats{
-  margin: 1em;
+
   text-align: center;
-  min-width: 225px;
   max-width: 900px;
   margin-bottom: 3em;
-  background-color: var(--main-content-bg);
   padding: .5em 1.75em 1em 1.75em;
-  box-shadow: 0px 7px 10px 3px rgb(11, 14, 14);
   border-radius: .2em;
+
 }
 .icon{
   width: 4em;
